updating the alluser.html file, and the uploading of the image's still working. And doing some code to implement the normalizaion of all points

--- a/django_project/aluser.html
+++ b/django_project/aluser.html
@@ -14,7 +14,7 @@
     </h2>
     <script>
         // Get all users
-        var url = "http://localhost:8000/farmers/";
+        var url = "http://localhost:8000/farmers.json";
         var xhr = new XMLHttpRequest()
         xhr.open('GET', url, true)
         xhr.onload = function () {
