the files ubdate-- bbbb

--- a/django_project/servAgri/imdata.html
+++ b/django_project/servAgri/imdata.html
@@ -31,7 +31,7 @@ page = """
 
     <script>
         
-        /*function get_index(inputObj) {
+        function get_index(inputObj) {
             var indexes = "";
             var chkbox = document.getElementsByClassName("input-chexkbox");
             //for(var i = 0; i < chkbox.length; i++){
@@ -44,7 +44,7 @@ page = """
                 }).done(function( o ){
                     //
                 });*/
-                /*var xhr = new XMLHttpRequest();
+                var xhr = new XMLHttpRequest();
                 xhr.open("GET", "callPython.py", true);
                 xhr.responseType = "JSON";
                 xhr.onload = function (e) {
@@ -56,7 +56,7 @@ page = """
             }
             //}
             alert(indexes);
-        }*/
+        }
 
     </script>
 
